--- a/new.html
+++ b/new.html
@@ -30,6 +30,40 @@
                 <img src="my.jpg" alt="">
             </div>
         </section>
+        <section class="about">
+            <div class="content">
+                <h1 class="me">About me </h1><br>
+                <h3 class="f">I am FreelancingFront-endDeveloper.</h3><br>
+                
+                <p>Hello! I'm Suman Khatiwada, and I live in the vibrant community of Makalbari. With a strong passion for [your field or interest], I've dedicated myself to honing my skills and gaining experience in [mention specific area or expertise]. Over the years, I've had the opportunity to work on [mention any projects or roles if applicable], which has helped me grow both personally and professionally.
+
+                    When I'm not working, I enjoy [mention hobbies or interests], which keeps me inspired and motivated. I'm always on the lookout for new challenges and learning opportunities that can push me to the next level.</p>br
+                    <br><br>
+                  <div class="education">
+                    <h3>Education</h3
+
+                  </div>
+                  <div class="edubar">
+                  <div class="eduflex">
+                    <div class="list">
+                        <div class="fi">upto2078</div>
+                        <div class="se">Secondary school</div>
+                        <div class="th">Sarswati Secondary school</div>
+                    </div>
+                    <div class="list">
+                        <div class="fi">2078-2080</div>
+                        <div class="se">Computer science</div>
+                        <div class="th">Jaya multiple campus</div>
+                    </div>
+                    <div class="list">
+                        <div class="fi">2080-2084</div>
+                        <div class="se">Bit</div>
+                        <div class="th">Kist Collage</div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </section>
 
 
     
